# enterprise-rag

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: test.yml
ch-2/: exercises.ipynb  run_evals.py  test_automated_evals.py
ch-3/: Untitled.ipynb  try_pub_med_search.py  try_search.py  update_ai_search.py  upload_sql_records.py
ch-4/: rag_logs.db  ragchat.py  run_evals.py  try_api_websockets.html
infrastructure/: .terraform.lock.hcl  README.md  ai-search.tf  backends.tf  key-vault.tf  locals.tf  main.tf  variables.tf
